# imp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT.md  BENCHMARKS.md  CLAUDE.md  CMakeLists.txt  DISPATCH.md  Dockerfile  LICENSE  README.md  TODO.md  bench_compare.sh  bench_fp8_prefill.sh  docker-compose.yml  docker-entrypoint.sh  imp  presets.toml
.github/workflows/: ci.yml
bench/: bench.py  docker-compose.bench.yml  profile.sh
bench/results/: optimization_log.md
benchmarks/: report.md
cmake/: CompilerFlags.cmake  FindCUDAToolkit131.cmake
docs/: comparison-llama-cpp.md  cuda131-optimization-plan.md  gemv-optimization-plan.md  gemv-optimization-report.md  memory-management-comparison.md  usage.md
include/imp/: config.h  error.h  imp.h  types.h
scripts/: imp-pull.py
src/api/: imp_api.cpp  imp_internal.h
src/compute/: activation.cu  activation.h  attention.cu  attention.h  attention_blackwell.cu  attention_cublas.cu  attention_cublas.h  attention_cutlass_fmha.cu  attention_cutlass_fmha.h  attention_dispatch.cu  attention_paged.cu  attention_paged.h  attention_paged_common.cuh  attention_paged_fp8.cu  attention_paged_int4.cu  attention_paged_int8.cu  attention_tc.cu  attention_tc.h  embedding.cu  embedding.h  gemm.cu  gemm.h  gemm_cublaslt_nvfp4.cu  gemm_cublaslt_nvfp4.h  gemm_cutlass.cu  gemm_cutlass.h  gemm_cutlass_mxfp4_sm120.cu  gemm_cutlass_mxfp4_sm120.h  gemm_cutlass_sm120.cu  gemm_cutlass_sm120.h  gemm_dp4a.cu  gemm_grouped.cu  gemm_grouped.h  gemm_moe_fused.cu  gemm_moe_fused.h  gemm_moe_fused_tc.cu  gemm_moe_fused_tc.h  gemm_q6k.cu  gemm_q6k.h  gemv_dp4a_traits.cuh  (+22 more)
src/core/: allocator.cpp  allocator.h  buffer.cpp  buffer.h  cuda_raii.h  logging.cpp  logging.h  tensor.cpp  tensor.h  tensor_view.h  threading.cpp  threading.h  toml_parser.cpp  toml_parser.h
src/graph/: executor.cu  executor.h  executor_forward.cu  executor_kernels.cu  executor_kernels.h  executor_workspace.cu  expert_cache.cu  graph.cpp  graph.h  op.cpp  op.h
src/memory/: device_allocator.cu  device_allocator.h  kv_cache.cu  kv_cache.h  kv_cache_manager.cpp  kv_cache_manager.h  layer_offload.cu  layer_offload.h  pinned_allocator.cpp  pinned_allocator.h  ssm_state.cu  ssm_state.h
src/model/: chat_template.cpp  chat_template.h  gguf_loader.cpp  gguf_loader.h  model.cpp  model.h  model_arch.h  safetensors_loader.cpp  safetensors_loader.h  tokenizer.cpp  tokenizer.h  weight_map.cpp  weight_map.h  weight_upload.cu
src/quant/: dequant_fp16.cu  dequant_fp16.h  dequant_gpu.cu  dequant_gpu.h  dequant_int8.cu  dequant_int8.h  fp8_quant.cu  fp8_quant.h  fp8_utils.cu  fp8_utils.h  nvfp4_gemm.cu  nvfp4_gemm.h  nvfp4_quant.cu  nvfp4_quant.h  quant_gemm.cu  quant_gemm.h  quant_types.h
src/runtime/: batch.cpp  batch.h  cuda_graph.cu  cuda_graph.h  eagle.cu  eagle.h  engine.cpp  engine.h  green_ctx.cu  green_ctx.h  ngram_spec.cpp  ngram_spec.h  pdl.cu  pdl.h  presets.cpp  presets.h  request.cpp  request.h  scheduler.cpp  scheduler.h  self_speculative.cpp  self_speculative.h  speculative.cpp  speculative.h
src/vision/: image_processor.cpp  image_processor.h  vision_encoder.cu  vision_encoder.h  vision_loader.cpp  vision_loader.h  vision_model.cpp  vision_model.h
tests/: test_activation.cu  test_attention.cu  test_attention_tc.cu  test_chat_template.cpp  test_continuous_batching.cpp  test_e2e.cpp  test_embedding.cu  test_engine_chat.sh  test_fp8_gemm.cu  test_fp8_kv_cache.cu  test_gemm.cu  test_gguf_loader.cpp  test_green_ctx.cu  test_hadamard.cu  test_kv_cache.cpp  test_layernorm.cu  test_moe.cu  test_moe_executor.cu  test_nvfp4_quant.cu  test_paged_attention.cu  test_quant.cu  test_quant_integration.cu  test_reduce.cu  test_rope.cu  test_sampling.cu  test_speculative.cpp  test_tensor.cpp  test_tokenizer.cpp
tests/reference/: gen_reference.py
tools/: benchmark.sh  chat.sh  download-models.sh  prompt-test.sh
tools/imp-bench/: bench_attention.cu  bench_e2e.cpp  bench_gemm.cu  main.cpp
tools/imp-cli/: args.cpp  args.h  main.cpp
tools/imp-server/: args.cpp  args.h  batching_engine.cpp  batching_engine.h  handlers.cpp  handlers.h  main.cpp  tool_call.cpp  tool_call.h  utils.cpp  utils.h
